# Kyrsach_7

./: .envsample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: celery.py  settings.py  urls.py
habits/: admin.py  models.py  paginators.py  permissions.py  serializers.py  service.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_alter_habit_periodic_alter_habit_place_and_more.py  0003_habit_last_sent.py
users/: models.py  urls.py  views.py
users/management/commands/: bot.py  csu.py
users/migrations/: 0001_initial.py
